--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ p{
 }
 /* (2) Banner Area */
 .banner{
-    border:3px solid green;
+    /* border:3px solid green; */
     width:100%;
     height:670px;
     background-image: url(../images/banner-bg.jpg);
@@ -103,58 +103,57 @@ p{
 }
 /* (3) Ads Area */
 /* Image your Parents Box first */
-/* コードかくにんは宿題 */
+
 .ads{
-    border:3px solid red;
-    width: 85%;
-    height: 400px;
-    margin: 4em auto;
-    overflow: auto;
+    /* border:3px solid red; */
+    width:85%;
+    margin:4em auto;
+    overflow:auto;
+}
+.ads-items{
+    /* border:3px solid blue; */
+    width:48.5%;
+    float:left;
+    height:380px;
+    background-size: cover;
+    background-position: center;
+    position:relative;
+    margin-bottom: 3%;
 }
 .ads-item1{
     margin-right: 3%;
-    border:3px solid blue;
-    width: 48.5%;
-    height:400px;
-    float:left;
     background-image:url(../images/ads-img1.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
 }
 .ads-item2{
-    border:3px solid blue;
-    width:48.5%;
-    height:400px;
-    float:left;
-    background-image: url(../images/ads-img2.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
+    background-image:url(../images/ads-img2.jpg);
 }
 .ads-text{
-    position: absolute;
+    position:absolute;
     top:30%;
-    left: 10%;
-    color: #fff;
-    transform: translateY(-50%); 
-    width: 45%;
+    left:10%;
+    transform: translateY(-50%);
+    width:40%;
 }
 .ads-text h3{
-    font-size: 2em;
     text-transform: uppercase;
-    text-shadow: 2px 2px 4px #312a26;
+    font-size: 2em;
+    color:#fff;
+    line-height: 1.2em;
+    text-shadow: 3px3px 6px #312a26;
 }
 .ads-text a{
     display: block;
-    font-family:'Raleway', sans-serif;
-    color: #fff;
-    font-size: medium;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    color:#fff;
+    text-transform: uppercase;
+    margin-top: 1em;
+    text-shadow: 3px 3px 6px #312a26;
 }
 
 /* (4) Merchandise Area */
 .merch{
-    border: 3px solid red;
+    /* border: 3px solid red; */
     margin: 4em auto;
     width: 85%;
     height: auto;
@@ -181,13 +180,13 @@ p{
 }
 /* Merch-Gallaly */
 .merch-gallery{
-    border: 3px solid green;
+    /* border: 3px solid green; */
     margin-top: 2em;
     padding: 5px;
     overflow: auto;
 }
 .merch-items{
-    border: 3px solid red;
+    /* border: 3px solid red; */
     width: 24.25%;
     float: left;
     margin-right: 1%;
@@ -272,9 +271,9 @@ p{
 
 /* (8) Reservation Area */
 .reservation{
-    border: 3px solid red;
-    width: 85%;
-    margin: 4em auto;
+    /* border:3px solid red; */
+    width:85%;
+    margin:4em auto;
 }
 form{
     overflow: auto;
@@ -282,11 +281,11 @@ form{
 .form-group{
     margin-top: 2em;
     background-color: #f2f2f2;
-    float: left;
-    width: 49.5%;
+    float:left;
+    width:49.5%;
     border-radius: 5px;
-    padding: 2em;
-    height: 650px;
+    padding:2em;
+    height:650px;
 }
 .form-group:nth-child(1){
     margin-right: 1%;
@@ -295,25 +294,25 @@ form input,
 form label,
 form select,
 form textarea{
-    display:inline-block;
-    width: 100%;
-    font-family:'Raleway', sans-serif;
-    padding: 1em;
+    display: inline-block;
+    width:100%;
+    font-family: 'Raleway', sans-serif;
+    padding:1em;
     margin-bottom: 1em;
 }
 form label{
     font-weight: 700;
-    padding: 0;
+    padding:0;
     margin-bottom: .5em;
 }
 .res-time{
     text-align: center;
 }
 .res-time *{
-    width: auto;
+    width:auto;
 }
 form p{
-    margin: 1em;
+    margin:1em;
     text-align: center;
     font-weight: 700;
 }
@@ -322,18 +321,19 @@ form h3{
     text-transform: uppercase;
 }
 form h3::after{
-    content: "";
-    background-image:url(../images/reservation-cards.png);
+    content:"";
+    background-image: url(../images/reservation-cards.png);
     background-size: contain;
     background-repeat: no-repeat;
     display: block;
-    width: 150px;
-    width: 150px;
+    width:300px;
+    height:80px;
     margin: auto;
 }
 .res-agreement *{
-    width: auto;
+    width:auto;
 }
+
 form input[type="submit"]{
     background-color: #c7a17a;
     font-weight: 700;
@@ -382,9 +382,33 @@ form input[type="submit"]{
 .footer-form *{
     width: auto;
 }
-.footer-social social-widgets h3{
+
+/*(10)Footer Social*/
+.footer-social{
+    padding: 0;
+    margin: 0;
+}
+.social-widgets{
+    /* border: 3px solid red; */
+    margin: 0;
+    width: 33.3%;
+    height: 50px;
+    float: left;
+    background-color: #312a26;
+    color: #fff;
+    text-align: center;
+}
+
+.social-widgets h3{
     text-transform: uppercase;
 }
-.footer-social social-widgets h4{
+.social-widgets a{
+    display: inline-block;
+}
+.social-widgets img{
+    height: 30px;
+}
+
+.social-widgets h4{
     font-family:'Raleway', sans-serif;
 }
